tests/machine/x/ocaml/unary_neg.ml

let () =
  print_endline -3
  print_endline (5 + (-2))
